--- a/Client/App.axaml
+++ b/Client/App.axaml
@@ -21,12 +21,17 @@
         <Style Selector="TextBlock.Bold">
             <Setter Property="FontWeight" Value="SemiBold" />
         </Style>
+        <Style Selector="TextBlock.Subtitle">
+            <Setter Property="FontWeight" Value="Normal" />
+            <Setter Property="Foreground" Value="{DynamicResource Light}"/>
+            <Setter Property="FontStyle" Value="Italic"/>
+        </Style>
     </Application.Styles>
     
     <Application.Resources>
         <Color x:Key="Dark">#FF1E1E24</Color>
         <Color x:Key="Mid">#FF26262D</Color>
-        <Color x:Key="Light">#FF545770</Color>
+        <Color x:Key="Light">#FF34343A</Color>
         <Color x:Key="White">#FFEBF2FF</Color>
         <Color x:Key="Accent">#FFFEBC2E</Color>
         <Color x:Key="Red">#FFF45449</Color>
