--- a/Client/View/Sidebars/SettingsSidebar.axaml
+++ b/Client/View/Sidebars/SettingsSidebar.axaml
@@ -9,17 +9,37 @@
 		<vm:SettingsSidebarViewModel/>
 	</Design.DataContext>
 	
+	<view:SidebarBase.Resources>
+		<SvgImage x:Key="Image.Account" Source="/Assets/Settings/Account.svg"/>
+		<SvgImage x:Key="Image.Security" Source="/Assets/Settings/Security.svg"/>
+		<SvgImage x:Key="Image.Notifications" Source="/Assets/Settings/Notifications.svg"/>
+		<SvgImage x:Key="Image.Appearance" Source="/Assets/Settings/Appearance.svg"/>
+		<SvgImage x:Key="Image.Status" Source="/Assets/Settings/Status.svg"/>
+	</view:SidebarBase.Resources>
+	
 	<ScrollViewer HorizontalScrollBarVisibility="Disabled"
 	              VerticalScrollBarVisibility="Auto">
-		<ItemsControl Items="{Binding SidebarItems}">
-			<ItemsControl.ItemTemplate>
-				<DataTemplate>
-					<components:SidebarButton
-						Text="{Binding Title}"
-						Icon="{Binding Icon}"
-						Click="OnSidebarItemClick"/>
-				</DataTemplate>
-			</ItemsControl.ItemTemplate>
-		</ItemsControl>
+		<StackPanel Orientation="Vertical">
+			<components:SidebarButton
+				Text="Account"
+				Icon="{StaticResource Image.Account}"
+				Click="Button_OnAccount"/>
+			<components:SidebarButton
+				Text="Security"
+				Icon="{StaticResource Image.Security}"
+				Click="Button_OnSecurity"/>
+			<components:SidebarButton
+				Text="Notifications"
+				Icon="{StaticResource Image.Notifications}"
+				Click="Button_OnNotifications"/>
+			<components:SidebarButton
+				Text="Appearance"
+				Icon="{StaticResource Image.Appearance}"
+				Click="Button_OnAppearance"/>
+			<components:SidebarButton
+				Text="Status"
+				Icon="{StaticResource Image.Status}"
+				Click="Button_OnStatus"/>
+		</StackPanel>
 	</ScrollViewer>
 </view:SidebarBase>
