--- a/Client/View/Content/Settings/SettingsAccountPanel.axaml
+++ b/Client/View/Content/Settings/SettingsAccountPanel.axaml
@@ -1,17 +1,50 @@
 <view:ContentBase xmlns="https://github.com/avaloniaui"
                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                   xmlns:view="clr-namespace:Client.View.Content"
+                  xmlns:components="clr-namespace:Client.View.Components"
                   x:Class="Client.View.Content.SettingsAccountPanel">
+	<view:ContentBase.Resources>
+		<components:IconText
+			x:Key="Content.Invite"
+			Text="Invite Friends"
+			Icon="{SvgImage /Assets/Settings/Invite.svg}"
+			Foreground="{DynamicResource Blue}"/>
+		<components:IconText
+			x:Key="Content.Request"
+			Text="Request Data"
+			Icon="{SvgImage /Assets/Settings/Request.svg}"
+			Foreground="{DynamicResource White}"/>
+		<components:IconText
+			x:Key="Content.Switch"
+			Text="Switch Account"
+			Icon="{SvgImage /Assets/Settings/Switch.svg}"
+			Foreground="{DynamicResource White}"/>
+		<components:IconText
+			x:Key="Content.Logout"
+			Text="Log out"
+			Icon="{SvgImage /Assets/Settings/Logout.svg}"
+			Foreground="{DynamicResource Red}"/>
+		<components:IconText
+			x:Key="Content.Delete"
+			Text="Delete Account"
+			Icon="{SvgImage /Assets/Settings/Delete.svg}"
+			Foreground="{DynamicResource Red}"/>
+	</view:ContentBase.Resources>
+
 	<view:ContentBase.Styles>
 		<Style Selector="TextBlock.Title">
 			<Setter Property="Foreground" Value="{DynamicResource Light}"/>
+			<Setter Property="Margin" Value="0.0 0.0 0.0 5.0"/>
+		</Style>
+		<Style Selector="Button">
+			<Setter Property="Padding" Value="12.0"/>
 		</Style>
 	</view:ContentBase.Styles>
 	
-	<Grid ColumnDefinitions="*,50,150"
+	<Grid ColumnDefinitions="*,23,200"
 	      RowDefinitions="*">
 		<Panel Grid.Column="0">
-			
+			<TextBlock Text="Account"/>
 		</Panel>
 		
 		<Border
@@ -24,14 +57,31 @@
 		
 		<ScrollViewer 
 			Grid.Column="2"
+			Padding="10.0"
 			HorizontalScrollBarVisibility="Disabled"
 			VerticalScrollBarVisibility="Auto">
 			<StackPanel Orientation="Vertical">
-				<TextBlock Text="Manage Account"
-				           Classes="Title Bold"/>
-				
-				<TextBlock Text="Dangerzone"
-				           Classes="Title Bold"/>
+				<TextBlock
+					Text="Manage Account"
+					Classes="Title Bold"/>
+				<Button
+					Content="{StaticResource Content.Invite}"
+					Click="Button_OnInvite"/>
+				<Button
+					Content="{StaticResource Content.Request}"
+					Click="Button_OnRequest"/>
+				<Button
+					Content="{StaticResource Content.Switch}"
+					Click="Button_OnSwitch"/>
+				<TextBlock
+					Text="Red line"
+					Classes="Title Bold"/>
+				<Button
+					Content="{StaticResource Content.Logout}"
+					Click="Button_OnLogout"/>
+				<Button
+					Content="{StaticResource Content.Delete}"
+					Click="Button_OnDelete"/>
 			</StackPanel>
 		</ScrollViewer>
 	</Grid>
