--- a/Client/View/Navigation.axaml
+++ b/Client/View/Navigation.axaml
@@ -20,9 +20,13 @@
 	</UserControl.Resources>
 	
 	<UserControl.Styles>
-		<Style Selector=":is(Button).NavButton">
+		<Style Selector=":is(Button)">
 			<Setter Property="DockPanel.Dock" Value="Top" />
+			<Setter Property="Background" Value="Transparent"/>
+			<Setter Property="BorderThickness" Value="0.0"/>
+			<Setter Property="BorderBrush" Value="Transparent"/>
 			<Setter Property="Margin" Value="0 0 0 30" />
+			<Setter Property="Padding" Value="8.0" />
 			<Setter Property="Transitions">
 				<Setter.Value>
 					<Transitions>
@@ -51,27 +55,22 @@
 	<DockPanel LastChildFill="True">
 		<components:RadioButton
 			Content="{StaticResource Image.Chat}"
-			Classes="NavButton"
 			GroupName="Navigation"
 			Click="Button_OnChat"/>
 		<components:RadioButton
 			Content="{StaticResource Image.Explore}"
-			Classes="NavButton"
 			GroupName="Navigation"
 			Click="Button_OnExplore"/>
 		<components:RadioButton
 			Content="{StaticResource Image.People}"
-			Classes="NavButton"
 			GroupName="Navigation"
 			Click="Button_OnPeople"/>
 		<components:RadioButton
 			Content="{StaticResource Image.Servers}"
-			Classes="NavButton"
 			GroupName="Navigation"
 			Click="Button_OnServers"/>
 		<components:RadioButton
 			Content="{StaticResource Image.Settings}"
-			Classes="NavButton"
 			GroupName="Navigation"
 			DockPanel.Dock="Bottom"
 			Margin="0"
