--- a/Client/View/Content/EmptyPanel.axaml
+++ b/Client/View/Content/EmptyPanel.axaml
@@ -1,6 +1,7 @@
-<view:ContentBase xmlns="https://github.com/avaloniaui"
-                  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                  xmlns:view="clr-namespace:Client.View.Content"
-                  x:Class="Client.View.Content.EmptyPanel">
+<view:ContentBase
+	xmlns="https://github.com/avaloniaui"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:view="clr-namespace:Client.View.Content"
+	x:Class="Client.View.Content.EmptyPanel">
 
 </view:ContentBase>
